deployments/domains/infrastructure/apps/argocd-config/base/config-patch.yaml
# File: deployments/domains/infrastructure/apps/platform/argocd/config-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30180
    - name: https
      port: 443
      targetPort: 8080
